--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body {
 
 html {
   scroll-behavior: smooth;
-  background-image: url("/public/bg.png");
+  background-image: url("/public/img/bg.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -54,10 +54,10 @@ html {
 
 ::selection {
   background-color: var(--primary);
-  color: var(--off-black);
+  color: var(--off-white);
 }
 
 ::-moz-selection {
   background-color: var(--primary);
-  color: var(--off-black);
+  color: var(--off-white);
 }
