--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body {
 
 html {
   scroll-behavior: smooth;
-  background-image: url("/public/img/bg.jpg");
+  background-image: url("/img/bg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
