--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color-scheme: dark;
 }
 
 body {
@@ -23,7 +24,7 @@ body {
 
 html {
   scroll-behavior: smooth;
-  background-image: url("/img/bg.jpg");
+  background-image: url("/img/bg.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
