Globalize some text styles and optimize PersonCard for mobile

--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,4 +1,4 @@
 @font-face {
   font-family: "AccentFont";
-  src: url("/fonts/FalzonSemiItalic.otf") format("truetype");
+  src: url("/fonts/FalzonSemiItalic.otf") format("opentype");
 }
